Bug 1398479 - Always return correct value for ServoSpecifiedValues::PropertyIsSet. r=manishearth

MozReview-Commit-ID: 8VMpLqcOhNz